--- a/srcs/req/wp/Dockerfile
+++ b/srcs/req/wp/Dockerfile
@@ -1,7 +1,7 @@
 FROM debian:buster
 RUN apt-get update
 RUN apt-get -y upgrade
-RUN apt-get install -y php-fpm php-mysql php-mbstring php-gd php-xml wget nano
+RUN apt-get install -y php-fpm php-mysql php-mbstring php-gd redis-server php-redis php-xml wget nano
 EXPOSE 9000
 COPY ./conf/    /var/www/
 RUN chmod +x /var/www/wpress_php.sh
